[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/bullet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Bullets/MissileBullet.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Effects/Flight Trail.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Effects/MissileExplosion.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sounds/explosion.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 315.01

[node name="Bullet" type="Area2D"]
scale = Vector2( 0.4, 0.4 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, -32, -10, 0, 0, 32, 10, 0 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Flight Trail" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 35 )
lifetime = 0.2

[node name="MissileExplosion" parent="." instance=ExtResource( 4 )]
explosiveness = 0.35
randomness = 0.25

[node name="ExplosionCollider" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionCollider"]
shape = SubResource( 1 )
disabled = true

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="ExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -15.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="area_entered" from="ExplosionCollider" to="." method="_on_ExplosionCollider_area_entered"]
[connection signal="body_entered" from="ExplosionCollider" to="." method="_on_ExplosionCollider_body_entered"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_DestroyTimer_timeout"]
